_sass/base.scss
$white: #fafafa;
$black: #272727;
$border: rgba($color: #000000,
    $alpha: 0.1,
  );
$borderDark: rgba($color: #fafafa,
    $alpha: 0.1,
  );
$link: #042086;
$linkDark: #32ff58;
$tagBackgroundWrapper: #f0f0f0;
$tagBackgroundWrapperDark: #303030;
$tagBackground: #dddddd;
$tagBackgroundDark: #3c3c3c;
$postBackground: #fafafa;
$postBackgroundDark: #2a2a2a;
$quoteBackground: #fff;
$quoteDarkBackground: #0d1117;
$tocBackground: #f2f2f2;
$tocBackgroundDark: #4d4d4d;
$headerBackground: #e9e9e9;
$headerBackgroundDark: #000;
$footerBackground: #dcdcdc;
$footerBackgroundDark: #000;
$tabBackground: #eaeaea;
$tabBackgroundDark: #424242;
$tabActiveBackground: #dedede;
$tabActiveBackgroundDark: #5b5b5b;

html {
  --color-text: #{$black};
  --color-background: #{$white};
  --color-border: #{$border};
  --color-link: #{$link};
  --color-background-tag-wrapper: #{$tagBackgroundWrapper};
  --color-background-tag: #{$tagBackground};
  --color-background-post: #{$postBackground};
  --color-background-quote: #{$quoteBackground};
  --color-background-toc: #{$tocBackground};
  --color-background-header: #{$headerBackground};
  --color-background-tab: #{$tabBackground};
  --color-active-tab: #{$tabActiveBackground};
}

html[data-theme="dark"] {
  --color-text: #{$white};
  --color-background: #{$black};
  --color-border: #{$borderDark};
  --color-link: #{$linkDark};
  --color-background-tag-wrapper: #{$tagBackgroundWrapperDark};
  --color-background-tag: #{$tagBackgroundDark};
  --color-background-post: #{$postBackgroundDark};
  --color-background-quote: #{$quoteDarkBackground};
  --color-background-toc: #{$tocBackgroundDark};
  --color-background-header: #{$headerBackgroundDark};
  --color-background-tab: #{$tabBackgroundDark};
  --color-active-tab: #{$tabActiveBackgroundDark};
}

@font-face {
  font-family: "Fira Code";
  src: url("/assets/font/Fira_Code_v6.2/woff2/FiraCode-VF.woff2") format("woff2") tech("variations"),
    url("/assets/font/Fira_Code_v6.2/woff2/FiraCode-VF.woff2") format("woff2-variations");
  font-weight: 100 1000;
  font-stretch: 25% 151%;
}

@mixin baseStyle {
  *::-webkit-scrollbar {
    display: none;
  }

  * {
    -ms-overflow-style: none;
    scrollbar-width: none;

    -webkit-user-select: none;
    -ms-user-select: none;
    user-select: none;
  }

  body {
    font-family: Fira Code, Verdana, sans-serif;
    margin: 0;
    background-color: var(--color-background);
    scroll-behavior: smooth;

    a {
      text-decoration: none;
    }
  }
}

.action-button {
  color: var(--color-text);
  background: var(--color-background-tag);
  border-radius: 0.5em;
  cursor: pointer;
  display: flex;
  align-items: center;
  justify-content: center;
  padding: 0 1em;
  margin: 0 1em;
  width: fit-content;
  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.15), 0 3px 6px rgba(0, 0, 0, 0.18);

  .fa {
    margin-right: 1em;
  }

  p {
    margin-right: 0.8em;
    font-weight: 500;
  }
}

.action-button:hover {
  color: var(--color-link);
}

